--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,10 @@
-rootpath= path
-dbhost = jdbc:postgresql://ip.port/database
-dbdriver = org.postgresql.Driver
-dblogin = login
-dbpassword = password
-endpoint = url
-lpu_id = lpuId
-sessionId =sessionId
+rootpath=path
+dbhost=jdbc:postgresql://ip.port/database
+dbdriver=org.postgresql.Driver
+dblogin=login
+dbpassword=password
+endpoint=url
+lpu_id=lpuId
+sessionId=sessionId
+login=login
+password=password
